--- a/app/src/App.css
+++ b/app/src/App.css
@@ -112,11 +112,9 @@ iframe {
 .collapser button {
   align-self: center;
   border: 0px;
-  border-radius: 5px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 5px 0 rgba(0, 0, 0, 0.19);
+  height: 100vh
 }
+
 
 .mainArea {
   display: flex;
