--- a/app/src/App.css
+++ b/app/src/App.css
@@ -30,6 +30,7 @@
 
 .header {
   display: flex;
+  flex-direction: row;
 }
 
 .header h1 {
@@ -90,8 +91,7 @@
 
 
 iframe {
-  width:100%;
-  height: 90vh;
+  width: 100%;
   resize: both;
   overflow: auto;
 }
@@ -99,6 +99,13 @@ iframe {
 .tableArea {
   background-color: rgb(197, 197, 218);
   min-width: 20%;
+  height: auto;
+  padding: 5px;
+}
+
+.bigtableArea {
+  background-color: rgb(197, 197, 218);
+  min-width: 40%;
   height: auto;
   padding: 5px;
 }
