--- a/app/src/App.css
+++ b/app/src/App.css
@@ -35,6 +35,7 @@
 
 .header h1 {
   padding-left: 5px;
+  margin-bottom: 0px;
 }
 
 .header button {
@@ -94,6 +95,12 @@ iframe {
   width: 100%;
   resize: both;
   overflow: auto;
+  height: 91vh;
+}
+
+.iframediv {
+  width: 100%;
+  height: 94vh;
 }
 
 .tableArea {
@@ -112,16 +119,27 @@ iframe {
 
 .collapser {
   background-color: rgb(197, 197, 218);
-  height: 100vh;
+  height: auto;
   display: flex;
 }
 
 .collapser button {
+  background-color: lightgray;
   align-self: center;
   border: 0px;
-  height: 100vh
+  height: 94vh
 }
 
+.tab {
+  float: left;
+  margin: 0px;
+}
+
+.tabbar {
+  background-color:lightgrey;
+  display: flex;
+  justify-content: flex-start;
+}
 
 .mainArea {
   display: flex;
