Added roll button functionality Added functionality of the roll button; the button can now be clicked to roll a random number within the range of numbers in the table. This will also highlight the table row whose number has been rolled

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -81,17 +81,26 @@
   padding: 5px;
 }
 
+.dmbasictable {
+  border-spacing: 2px 5px;
+}
+
 .dmbasictable tr, td, th {
   border-radius: 1px;
   padding: 10px;
 }
 
-.dmbasictable tr:nth-child(even) {
+.dmbasictable tr:nth-child(even) td{
   background-color: rgb(199, 194, 194);
 }
 
+.dmbasictable tr:nth-child(odd) td{
+  background-color: rgb(231, 224, 224);
+}
+
 .rolledrow {
-  border: 2px solid black;
+  box-shadow: 0px 0px 0px 3px rgb(0,0,0);
+  font-weight: 500;
 }
 
 iframe {
