--- a/app/src/App.css
+++ b/app/src/App.css
@@ -175,6 +175,50 @@ iframe {
   flex-direction: row;
 }
 
+.searchbar {
+  background-color: white;
+  padding: 2px 4px;
+  margin-bottom: 5px;
+  width: fit-content;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.searchbar input {
+  border: none;
+  height: 25px;
+  padding-left: 6px;
+  font-size: .9rem;
+}
+
+.searchbar input:focus {
+  outline: none;
+}
+
+.searchresults {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.searchresult {
+  background-color: white;
+  margin: 0px;
+  display: flex;
+  align-items:flex-start;
+}
+
+.searchresult button {
+  width: 100%;
+  border: none;
+  background-color: white;
+  text-align: left;
+}
+
+.searchresult button:hover {
+  background-color: gray;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
