--- a/app/src/App.css
+++ b/app/src/App.css
@@ -61,7 +61,7 @@
   width: fit-content;
   max-width: 900px;
   height: fit-content;
-  margin-bottom: 10px;
+  margin-top: 5px;
 }
 
 .tableContainer button {
@@ -178,7 +178,7 @@ iframe {
 .searchbar {
   background-color: white;
   padding: 2px 4px;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   width: fit-content;
   border-radius: 5px;
   display: flex;
@@ -199,6 +199,10 @@ iframe {
 .searchresults {
   width: 100%;
   border-collapse: collapse;
+  position: absolute;
+  width: 200px;
+  margin-left: 5px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19)
 }
 
 .searchresult {
