--- a/app/src/App.css
+++ b/app/src/App.css
@@ -171,6 +171,10 @@ iframe {
   border: none;
 }
 
+.tab:hover {
+  background-color: rgb(201, 201, 201);
+}
+
 .tabadd {
   float: right;
   height: 23px;
