--- a/app/src/App.css
+++ b/app/src/App.css
@@ -328,6 +328,11 @@ iframe {
   text-align: left;
 }
 
+.editbtn {
+  max-width: fit-content;
+  margin-right: 0;
+}
+
 .searchresult button:hover {
   background-color: gray;
 }
