--- a/app/src/App.css
+++ b/app/src/App.css
@@ -2,17 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -30,13 +19,15 @@
 
 .header {
   display: flex;
+  padding-left: 5px;
   flex-direction: row;
+  align-items: center;
   height: 7vh;
 }
 
 .header h1 {
   padding-left: 5px;
-  margin-bottom: 0px;
+  margin-bottom: 15px;
 }
 
 .header button {
@@ -57,12 +48,13 @@
 }
 
 .tableContainer {
-  background-color: rgb(88, 156, 102);
+  background-color: rgb(204, 118, 118);
   border-radius: 5px;
   width: fit-content;
   max-width: 900px;
   height: fit-content;
   margin-top: 5px;
+  
 }
 
 .tableContainer button {
@@ -114,6 +106,7 @@
 	padding: 5px;
 	background-color: white;
 	border-radius: 0px 0px 5px 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .spellinfo p {
@@ -134,7 +127,7 @@ iframe {
 }
 
 .tableArea {
-  background-color: rgb(141, 155, 152);
+  background-image: linear-gradient(to bottom right, rgb(142, 129, 190), rgb(60, 140, 151));
   min-width: 20%;
   float: none;
   overflow-y: auto;
