User table creation complete

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -422,6 +422,11 @@ iframe {
   display: flex;
 }
 
+.headertext {
+  font-size: small;
+  overflow: hidden;
+}
+
 .tooltip {
   background-color: rgb(45, 45, 139);
   width: 20px;
