Updates to prepare for producton

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: 100vh;
 }
 
 .App-header {
@@ -26,7 +27,8 @@
 }
 
 .loginscreen {
-  height: 70vh;
+  height: fit-content;
+  min-height: 70vh;
   width: 70%;
   padding: 10px;
   display: flex;
@@ -116,7 +118,7 @@
   padding-left: 5px;
   flex-direction: row;
   align-items: center;
-  height: 7vh;
+  height: 60px
 }
 
 .header div {
@@ -221,7 +223,7 @@
 }
 
 .diceroller {
-  height: 100%;
+  height: calc(100% - 38px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -338,26 +340,25 @@
 iframe {
   width: 100%;
   overflow: auto;
-  height: 89vh
+  height: calc(100% - 38px)
 }
 
 .iframediv {
-  max-width: 900px;
   width: 100%;
 }
 
 .tableArea {
   background-image: linear-gradient(to bottom right, rgb(142, 129, 190), rgb(60, 140, 151));
   min-width: 20%;
+  max-width: 30%;
   float: none;
   overflow-y: auto;
   flex-grow: 100;
   padding: 5px;
-  flex-grow: 100;
 }
 
 .bigtableArea {
-  background-color: rgb(141, 155, 152);
+  background-image: linear-gradient(to bottom right, rgb(142, 129, 190), rgb(60, 140, 151));
   min-width: 40%;
   height: auto;
   overflow-y: auto;
@@ -494,7 +495,7 @@ iframe {
 .mainArea {
   display: flex;
   flex-direction: row;
-  height: 93vh;
+  height: calc(100% - 60px)
 }
 
 .searchbar {
@@ -565,6 +566,7 @@ iframe {
   border-radius: 5px;
 }
 
+
 .newitemform {
   position: absolute;
   background-color: white;
@@ -575,6 +577,33 @@ iframe {
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
   overflow-x: visible;
   overflow-y: scroll;
+}
+
+#newitemformright {
+  right: 0px
+}
+
+.deletewindow {
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1px 0px 1px 0px;
+}
+
+.deletewindow p {
+  margin: 0px;
+}
+
+.deletewindow button {
+  background-color: rgb(238, 238, 238);
+  border: none;
+  border-radius: 5px;
+  margin-left: 5px;
+}
+
+.deletewindow button:hover {
+  background-color: rgb(223, 223, 223);
 }
 
 .newitemform button {
